infra/02service.yaml
apiVersion: v1
kind: Service
metadata:
  name: telegrambot-deficiente-service
  namespace: telegrambot-deficiente
spec:
  selector:
    app: telegrambot-deficiente
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: telegrambot-deficiente-redis-service
  namespace: telegrambot-deficiente
spec:
  selector:
    app: telegrambot-deficiente-redis
  ports:
    - port: 6379
      targetPort: 6379
