infra/03ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: telegrambot-deficiente-ingressroute
  namespace: telegrambot-deficiente
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`deficiente.thexiao77.com`)
      kind: Rule
      services:
        - name: telegrambot-deficiente-service
          port: 8080
      middlewares:
        - name: middleware-https-telegrambot-deficiente
  tls:
    secretName: telegrambot-deficiente-tls
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: middleware-https-telegrambot-deficiente
  namespace: telegrambot-deficiente
spec:
  redirectScheme:
    scheme: https
